# representation-fragility-lab

./: .gitignore  README.md  pyproject.toml  quickstart.py
.codex/environments/: environment.toml
docs/: invariance_taxonomy.md  release-checklist.md
docs/issues/: 001_representation_comparison.md  006_signal_classes_invariance.md  007_metric_fragility.md  008_failure_mechanisms.md  009_automated_blind_spot.md  010_hybrid_estimator.md  011_confidence_modeling.md  011_self_aware_tracking.md  042_mel_chroma_blind_spots.md
listen_test/: exp023.html  index.html
results/exp042_mel_chroma_blind_spots/: exp042_chirp_snr_sweep.json  exp042_fm_tone_snr_sweep.json  exp042_harmonic_stack_snr_sweep.json  exp042_noise_snr_sweep.json  exp042_percussive_snr_sweep.json  exp042_sine_snr_sweep.json
scratch/: JuceHeader.h  debug_beats.py  debug_denoising.py  debug_onsets.py  debug_pitch.py  debug_vst.txt  test_yin_cpp.cpp
src/experiments/: exp001_noise_fragility.py  exp002_noise_acf_fragility.py  exp003_compare_stft_vs_acf.py  exp004_compare_all.py  exp005_pitch_shift_fragility.py  exp006_time_stretch_fragility.py  exp007_filter_fragility.py  exp008_harmonic_removal_fragility.py  exp009_signal_class_baseline.py  exp010_noise_fragility_by_class.py  exp011_metric_comparison.py  exp012_targeted_probing.py  exp013_automated_discovery.py  exp014_hybrid_pitch_estimator.py  exp015_self_aware_tracking.py  exp016_failure_forecasting.py  exp017_adaptive_routing.py  exp018_meta_representation.py  exp019_adaptive_tuner.py  exp020_tuner_real_vocal.py  exp021_note_stabilization.py  exp022_confidence_gated_tuner.py  exp023_retune_atlas.py  exp024_onset_detection.py  exp025_learning_failure_manifold.py  exp026_cross_task_transfer.py  exp027_failure_manifold_mapping.py  exp028_failure_manifold_validation.py  exp029_failure_trajectories.py  exp030_universal_audio_state_space.py  exp031_assumption_surfaces.py  exp032_framework_api.py  exp033_framework_assisted_dsp.py  exp034_framework_validation.py  exp035_framework_limits.py  exp036_theory_validation.py  exp037_plugin_integration.py  exp038_learned_controller.py  exp039_framework_v1_validation.py  exp040_generalization_challenge.py  (+3 more)
src/framework/: __init__.py  descriptors.py  engine.py  export_weights.py  weights.py
src/framework/plugins/: __init__.py  denoiser.py  onset_detector.py  pitch_tracker.py
src/metrics/: similarity.py
src/perturbations/: filter.py  harmonic_removal.py  noise.py  pitch_shift.py  time_stretch.py
src/representations/: acf.py  cepstrum.py  stft.py
src/signals/: chirp.py  fm_tone.py  harmonic_stack.py  impulse.py  noise.py  sine.py
src/vst_prototype/: CMakeLists.txt
src/vst_prototype/Source/: DSP.cpp  DSP.h  Engine.cpp  Engine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
